<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="60dp"

        tools:context="com.example.asad.myapp.FragmentLogin">

        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:src="@drawable/ic_accessibility_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo" />

        <!-- Email Label -->
        <TextView

            android:id="@+id/textUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:text="@string/user_name"
            android:textSize="20sp"

            tools:layout_editor_absoluteY="156dp" />

        <EditText

            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_shape"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:ems="10"

            android:padding="5dp"
            android:hint="@string/your_name_here"
            android:inputType="textEmailAddress"
            android:text=""

            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="189dp" />

        <!-- Password Label -->
        <TextView

            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:text="@string/password"
            android:textSize="20sp"

            tools:layout_editor_absoluteY="156dp" />

        <EditText

            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_shape"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:ems="10"

            android:padding="5dp"
            android:hint="@string/your_password_here"
            android:inputType="textPassword"
            android:text=""

            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="189dp" />

        <Button

            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:text="@string/log_in"

            android:textStyle="bold"


            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/no_account_yet_create_one"
            android:gravity="center"

            android:textSize="16sp"/>


    </LinearLayout>

