<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        android:fitsSystemWindows="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginBottom="24dp"
        tools:context="com.example.asad.myapp.FragmentLogin">

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:src="@drawable/ic_accessibility_black_24dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo" />

        <!-- Email Label -->
        <TextView

            android:id="@+id/textUserName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:text="@string/your_name"
            android:textSize="20sp"

            tools:layout_editor_absoluteY="156dp" />

        <EditText

            android:id="@+id/editTextUsername2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_shape"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:ems="10"

            android:padding="5dp"
            android:hint="@string/your_name_here"
            android:inputType="textEmailAddress"
            android:text=""

            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="189dp" />

        <!-- Password Label -->
        <TextView

            android:id="@+id/textPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="16dp"
            android:text="@string/password"
            android:textSize="20sp"

            tools:layout_editor_absoluteY="156dp" />

        <EditText

            android:id="@+id/editTextPassword4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_shape"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:ems="10"

            android:padding="5dp"
            android:hint="@string/your_password_here"
            android:inputType="textPassword"
            android:text=""

            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="189dp" />

        <TextView

            android:id="@+id/textgender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="16dp"
            android:text="Gender"
            android:textSize="20sp"

            tools:layout_editor_absoluteY="156dp" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginStart="15dp"
                />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginStart="15dp"
               />
        </RadioGroup>

        <Button

            android:id="@+id/buttonsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:text="@string/sign_up"

            android:textStyle="bold"
            android:layout_marginBottom="30dp"

            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>



    </LinearLayout>

